--- a/badges.css
+++ b/badges.css
@@ -488,7 +488,7 @@
 } 
 /*User Background*/ 
 .cm.id-45541957::before {
-    background-image: url("https://i.imgur.com/ZWApShJ.gif");
+    background-image: url("https://i.imgur.com/agjUmbY.gif");
     background-repeat: no-repeat;
     content: "";
     position: absolute;
