changed haise's name color

--- a/main.css
+++ b/main.css
@@ -1284,8 +1284,8 @@ div.message > div.msg > div.from > span.un {
 
 /* Haise - Dark Purple */
 @keyframes haise {
-    0% { color: #4B0082; }
-    100% { color: #4B0082; }
+    0% { color: #DE01FF; }
+    100% { color: #DE01FF; }
 }
 
 /* Frynaut - ??? */
