--- a/badges.css
+++ b/badges.css
@@ -475,8 +475,8 @@
 /*User Badge*/ 
 #user-rollover.id-45541957 .badge-box i.bdg,
 #chat-messages .id-45541957 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/BT3yVSh.gif");
-    /*https://i.imgur.com/9pKc1LK.gif*/ 
+    background-image: url("https://i.imgur.com/9pKc1LK.gif");
+    /*https://i.imgur.com/BT3yVSh.gif*/ 
     background-size: cover;
     border-radius: 7px;
     width: 100%;
