--- a/badges.css
+++ b/badges.css
@@ -599,7 +599,7 @@
 /*User Badge*/
 #user-rollover.id-4183714 .badge-box i.bdg,
 #chat-messages .id-4183714 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/WJVNNvZ.png");
+    background-image: url("https://i.imgur.com/toyCTdT.png");
     background-size: cover;
     border-radius: 7px;
     width: 100%;
