changed jeebs's icon

--- a/main.css
+++ b/main.css
@@ -572,7 +572,7 @@ div.message > div.msg > div.from > span.un {
 #waitlist .list .user[data-uid="4183714"] .meta.is-staff .name .icon-chat-bouncer,
 #user-rollover.id-4183714 .info .role i.icon-chat-bouncer,
 #user-lists .list.room .user.id-4183714 .icon-chat-bouncer {
-    background: url("https://i.imgur.com/7mIgVj3.png") no-repeat !important;
+    background: url("https://i.imgur.com/5q8Oob5.png") no-repeat !important;
 }
 #user-rollover.id-4183714 .meta .thumb {
     border-color: #3e3e3e !important;
