--- a/badges.css
+++ b/badges.css
@@ -583,6 +583,33 @@
     transition: 0.4s;
 }
 
+/* badge for lennox */
+#chat-messages .id-41096019 .badge-box {
+    width: 30px;
+    height: 30px;
+    transition: 0.5s;
+}
+
+#chat-messages .id-41096019 .badge-box:hover {
+    width: 65px;
+    height: 65px;
+    transition: 0.5s;
+} 
+
+/*User Badge*/ 
+#user-rollover.id-41096019 .badge-box i.bdg,
+#chat-messages .id-41096019 .badge-box i.bdg {
+    background-image: url("https://i.imgur.com/jnNAEhn.jpg");
+    background-size: cover;
+    border-radius: 7px;
+    width: 100%;
+    height: 100%;
+    background-position: initial;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+}
+
 /* Jeebs */
 #chat-messages .id-4183714 .badge-box {
     width: 30px;
