Updated background for 808ЯΞF

--- a/badges.css
+++ b/badges.css
@@ -324,7 +324,7 @@
 }
 /*User Background*/
 .cm.id-43911460::before {
-    background-image: url("https://i.imgur.com/8vBn89t.jpg");
+    background-image: url("https://i.imgur.com/fwosQuf.gif");
     background-repeat: no-repeat;
     content: "";
     position: absolute;
