--- a/badges.css
+++ b/badges.css
@@ -583,6 +583,23 @@
     transition: 0.4s;
 }
 
+/*Frynaut*/
+
+/*User Background*/ 
+.cm.id-424349::before {
+    background-image: url("https://i.imgur.com/9OqcECw.gif");
+    background-repeat: no-repeat;
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.4;
+    z-index: -1;
+    transition: 0.4s;
+}
+
 /* badge for lennox */
 #chat-messages .id-41096019 .badge-box {
     width: 30px;
