--- a/badges.css
+++ b/badges.css
@@ -584,10 +584,9 @@
 }
 
 /*Frynaut*/
-
 /*User Background*/ 
 .cm.id-424349::before {
-    background-image: url("https://i.imgur.com/9OqcECw.gif");
+    background-image: url("https://i.imgur.com/h2PtyQi.gif");
     background-repeat: no-repeat;
     content: "";
     position: absolute;
