--- a/badges.css
+++ b/badges.css
@@ -666,3 +666,44 @@
     z-index: -1;
     transition: 0.4s;
 }
+
+/* LiptonGod */
+#chat-messages .id-42112940 .badge-box {
+    width: 30px;
+    height: 30px;
+    transition: 0.5s;
+}
+
+#chat-messages .id-42112940 .badge-box:hover {
+    width: 65px;
+    height: 65px;
+    transition: 0.5s;
+}
+
+/*User Badge*/
+#user-rollover.id-42112940 .badge-box i.bdg,
+#chat-messages .id-42112940 .badge-box i.bdg {
+    background-image: url("https://i.imgur.com/ts2O7GJ.gif");
+    background-size: cover;
+    border-radius: 7px;
+    width: 100%;
+    height: 100%;
+    background-position: initial;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+}
+/*User Background*/
+.cm.id-42112940::before {
+    background-image: url("https://i.imgur.com/mvSEkYD.gif");
+    background-repeat: no-repeat;
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.5;
+    z-index: -1;
+    transition: 0.4s;
+}
