--- a/badges.css
+++ b/badges.css
@@ -599,7 +599,7 @@
     transition: 0.4s;
 }
 
-/* badge for lennox */
+/* lennox */
 #chat-messages .id-41096019 .badge-box {
     width: 30px;
     height: 30px;
@@ -624,6 +624,21 @@
     position: absolute;
     top: 0px;
     left: 0px;
+}
+
+/*User Background*/
+.cm.id-4183714::before {
+    background-image: url("https://i.imgur.com/svc6dtB.gif");
+    background-repeat: no-repeat;
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.4;
+    z-index: -1;
+    transition: 0.4s;
 }
 
 /* Jeebs */
