--- a/badges.css
+++ b/badges.css
@@ -614,7 +614,7 @@
 /*User Badge*/ 
 #user-rollover.id-41096019 .badge-box i.bdg,
 #chat-messages .id-41096019 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/jnNAEhn.jpg");
+    background-image: url("https://i.imgur.com/9GnKcpZ.gif");
     background-size: cover;
     border-radius: 7px;
     width: 100%;
@@ -709,7 +709,7 @@
 }
 /*User Background*/
 .cm.id-42112940::before {
-    background-image: url("https://i.imgur.com/mvSEkYD.gif");
+    background-image: url("https://i.imgur.com/Kqamrlq.gif");
     background-repeat: no-repeat;
     content: "";
     position: absolute;
@@ -717,7 +717,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    opacity: 0.5;
+    opacity: 0.8;
     z-index: -1;
     transition: 0.4s;
 }
