--- a/badges.css
+++ b/badges.css
@@ -709,7 +709,7 @@
 }
 /*User Background*/
 .cm.id-42112940::before {
-    background-image: url("https://i.imgur.com/Kqamrlq.gif");
+    background-image: url("https://i.imgur.com/wsI0N0q.gif");
     background-repeat: no-repeat;
     content: "";
     position: absolute;
@@ -717,7 +717,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    opacity: 0.8;
+    opacity: 0.35;
     z-index: -1;
     transition: 0.4s;
 }
