--- a/badges.css
+++ b/badges.css
@@ -614,7 +614,7 @@
 /*User Badge*/ 
 #user-rollover.id-41096019 .badge-box i.bdg,
 #chat-messages .id-41096019 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/9GnKcpZ.gif");
+    background-image: url("https://i.imgur.com/jnNAEhn.jpg");
     background-size: cover;
     border-radius: 7px;
     width: 100%;
