--- a/badges.css
+++ b/badges.css
@@ -627,7 +627,7 @@
 
 /*User Background*/
 .cm.id-41096019::before {
-    background-image: url("https://i.imgur.com/svc6dtB.gif");
+    background-image: url("https://i.imgur.com/089YZMN.jpg");
     background-repeat: no-repeat;
     content: "";
     position: absolute;
