changed lipton's badge

--- a/badges.css
+++ b/badges.css
@@ -697,7 +697,7 @@
 /*User Badge*/
 #user-rollover.id-42112940 .badge-box i.bdg,
 #chat-messages .id-42112940 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/ts2O7GJ.gif");
+    background-image: url("https://i.imgur.com/9IOyjqR.gif");
     background-size: cover;
     border-radius: 7px;
     width: 100%;
