--- a/badges.css
+++ b/badges.css
@@ -201,7 +201,7 @@
 }
 /*User Background*/
 .cm.id-43911460::before {
-    background-image: url("https://i.imgur.com/Dhjzp0y.gif");
+    background-image: url("https://i.imgur.com/SUFpfmN.gif");
     background-repeat: no-repeat;
     content: "";
     position: absolute;
@@ -209,7 +209,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    opacity: 0.4;
+    opacity: 1.0;
     z-index: -1;
     transition: 0.4s;
 }
