--- a/badges.css
+++ b/badges.css
@@ -201,7 +201,7 @@
 }
 /*User Background*/
 .cm.id-43911460::before {
-    background-image: url("https://i.imgur.com/SUFpfmN.gif");
+    background-image: url("https://i.imgur.com/5zP6sRU.gif");
     background-repeat: no-repeat;
     content: "";
     position: absolute;
