--- a/badges.css
+++ b/badges.css
@@ -214,6 +214,22 @@
     transition: 0.4s;
 }
 
+/* Risotto Nero */
+/*User Background*/ 
+.cm.id-50102609::before {
+    background-image: url("https://i.imgur.com/BmH7kvz.gif");
+    background-repeat: no-repeat;
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.4;
+    z-index: -1;
+    transition: 0.4s;
+}
+
 /* MrDerf */
 #chat-messages .id-41485803 .badge-box {
     width: 30px;
