removed risotto bg

--- a/badges.css
+++ b/badges.css
@@ -217,7 +217,7 @@
 /* Risotto Nero */
 /*User Background*/ 
 .cm.id-50102609::before {
-    background-image: url("https://i.imgur.com/BmH7kvz.gif");
+    background-image: url("");
     background-repeat: no-repeat;
     content: "";
     position: absolute;
