--- a/badges.css
+++ b/badges.css
@@ -217,7 +217,7 @@
 /* Risotto Nero */
 /*User Background*/ 
 .cm.id-50102609::before {
-    background-image: url("");
+    background-image: url("https://i.imgur.com/ox78gGV.gif");
     background-repeat: no-repeat;
     content: "";
     position: absolute;
@@ -225,7 +225,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    opacity: 0.4;
+    opacity: 0.7;
     z-index: -1;
     transition: 0.4s;
 }
