--- a/main.css
+++ b/main.css
@@ -413,8 +413,8 @@ div.message > div.msg > div.from > span.un {
 
 #chat .cm.message.id-45541957,
 #chat .cm.emote.id-45541957 {
-    border-left: #00ff80 !important;
-    border-right: #00ff80 !important;
+    border-left: #ff1a1a !important;
+    border-right: #ff1a1a !important;
     border-left-style: solid !important;
     border-right-style: solid !important;
     display: inline-block !important;
