--- a/badges.css
+++ b/badges.css
@@ -328,7 +328,7 @@
 /*User Badge*/ 
 #user-rollover.id-45541957 .badge-box i.bdg,
 #chat-messages .id-45541957 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/rp6VwhI.gif");
+    background-image: url("https://i.imgur.com/aBX5t2l.gif");
     /* old badge:https://i.imgur.com/M1oMf8r.gif */
     background-size: cover;
     border-radius: 7px;
