--- a/badges.css
+++ b/badges.css
@@ -342,7 +342,7 @@
 } 
 /*User Background*/ 
 .cm.id-45541957::before {
-    background-image: url("https://i.imgur.com/WoFLTu0.gif"); 
+    background-image: url("https://i.imgur.com/dMmEcJS.gif"); 
     /* old bg:https://i.imgur.com/agjUmbY.gif */
     background-repeat: no-repeat;
     content: "";
@@ -351,7 +351,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    opacity: 1.0;
+    opacity: 0.7;
     z-index: -1;
     transition: 0.4s;
 }
