--- a/badges.css
+++ b/badges.css
@@ -1,5 +1,18 @@
 /* Custom Badges */
-
+/* Modder*/
+/*Modder*/ 
+.cm.id-50102609::before {
+    background-image: url("https://i.imgur.com/ox78gGV.gif");
+    background-repeat: no-repeat;
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.7;
+    z-index: -1;
+    transition: 0.4s;
 /* General */
 #chat .badge-box i,
 .right-side-wrapper #chat .badge-box .icon-arrow-down {
