--- a/badges.css
+++ b/badges.css
@@ -342,7 +342,7 @@
 } 
 /*User Background*/ 
 .cm.id-45541957::before {
-    background-image: url("https://i.imgur.com/dMmEcJS.gif"); 
+    background-image: url("https://i.imgur.com/c4mBE9r.gif"); 
     /* old bg:https://i.imgur.com/agjUmbY.gif */
     background-repeat: no-repeat;
     content: "";
