--- a/main.css
+++ b/main.css
@@ -373,7 +373,7 @@ div.message > div.msg > div.from > span.un {
 }
 
 /* Discrested */
-/*#user-rollover.id-45541957 .username,
+#user-rollover.id-45541957 .username,
 #chat [data-cid^="45541957-"] span.un.clickable {
     animation: discrested 1s infinite !important;
 }
@@ -381,13 +381,13 @@ div.message > div.msg > div.from > span.un {
 #user-rollover.id-45541957 .info .role span:after {
     content: '';
 }
-/*.id-45541957 .msg .from i.icon-chat-bouncer,
+.id-45541957 .msg .from i.icon-chat-bouncer,
 #waitlist .list .user[data-uid="45541957"] .meta.is-staff .name .icon-chat-bouncer,
 #user-rollover.id-45541957 .info .role i.icon-chat-bouncer,
 #user-lists .list.room .user.id-45541957 .icon-chat-bouncer {
     background: url("https://i.imgur.com/7mIgVj3.png") no-repeat !important;
-}*/
-/*#user-rollover.id-45541957 .meta .thumb {
+}
+#user-rollover.id-45541957 .meta .thumb {
     border-color: #69DDFF !important;
 }
 .id-45541957 .msg .from.manager .un,
@@ -413,8 +413,8 @@ div.message > div.msg > div.from > span.un {
 
 #chat .cm.message.id-45541957,
 #chat .cm.emote.id-45541957 {
-    border-left: #ff1a1a !important;
-    border-right: #ff1a1a !important;
+    border-left: #69ddff !important;
+    border-right: #69ddff !important;
     border-left-style: solid !important;
     border-right-style: solid !important;
     display: inline-block !important;
