--- a/main.css
+++ b/main.css
@@ -433,7 +433,7 @@ div.message > div.msg > div.from > span.un {
 }
 .emote.id-45541957 .text {
     animation: discrested 1s infinite !important;
-}*/
+}
 
 /* Mileena */
 #user-rollover.id-42675536 .username,
