--- a/main.css
+++ b/main.css
@@ -413,8 +413,8 @@ div.message > div.msg > div.from > span.un {
 
 #chat .cm.message.id-45541957,
 #chat .cm.emote.id-45541957 {
-    border-left: #69ddff !important;
-    border-right: #69ddff !important;
+    border-left: /*#69ddff*/ #ff0000 !important;
+    border-right: /*#69ddff*/ #ff0000 !important;
     border-left-style: solid !important;
     border-right-style: solid !important;
     display: inline-block !important;
