--- a/badges.css
+++ b/badges.css
@@ -385,7 +385,7 @@
 
 /*User Background*/
 .cm.id-41096019::before {
-    background-image: url("https://i.imgur.com/089YZMN.jpg");
+    background-image: url("https://i.imgur.com/Pc3X1cM.gif");
     background-repeat: no-repeat;
     content: "";
     position: absolute;
@@ -393,7 +393,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    opacity: 0.6;
+    opacity: 0.3;
     z-index: -1;
     transition: 0.4s;
 }
